<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.home.HomeFragment">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarCoor"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:background="?attr/colorOnPrimary"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsingToolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/toolbar_color"
                app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/img_background"
                    android:src="@drawable/background"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_collapseMode="parallax" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_marginTop="?attr/actionBarSize"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/img_logo"
                        android:layout_width="@dimen/logo_dimen"
                        android:layout_height="@dimen/logo_dimen"
                        android:layout_centerInParent="true"
                        android:src="?attr/logo_image"
                        app:layout_collapseMode="parallax"
                        android:layout_marginTop="@dimen/dimen_24dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView"
                        style="@style/GitFriendTextStyle.Regular.Heading3.White"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/img_logo"
                        android:layout_marginTop="@dimen/dimen_8dp"
                        android:text="@string/app_name"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/img_logo" />

                    <LinearLayout
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView"
                        android:layout_width="wrap_content"
                        android:orientation="horizontal"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btn_search_big"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingHorizontal="@dimen/dimen_16dp"
                            android:background="@drawable/bg_button"
                            android:drawableEnd="@drawable/ic_search"
                            android:text="@string/label_find_friend"
                            android:layout_marginEnd="@dimen/dimen_12dp"
                            android:textAllCaps="false"
                            android:textColor="?attr/text_color"/>

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btn_favorite_big"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bg_button"
                            android:paddingHorizontal="@dimen/dimen_16dp"
                            android:drawableEnd="@drawable/ic_favorite_filled"
                            android:text="@string/label_fav_friend"
                            android:textAllCaps="false"
                            android:textColor="?attr/text_color"/>

                    </LinearLayout>

                    <ImageButton
                        android:id="@+id/btn_setting_big"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dimen_16dp"
                        android:background="@android:color/transparent"
                        android:src="@drawable/ic_setting"
                        android:paddingHorizontal="@dimen/dimen_16dp"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />



                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolBar"
                    app:expandedTitleTextAppearance="@android:color/transparent"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tv_app_name"
                            android:text="@string/app_name"
                            android:layout_centerVertical="true"
                            style="@style/GitFriendTextStyle.Regular.Heading3.White"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <ImageButton
                            android:background="@android:color/transparent"
                            android:id="@+id/btn_search"
                            android:paddingHorizontal="@dimen/dimen_16dp"
                            android:paddingVertical="@dimen/dimen_8dp"
                            android:layout_toStartOf="@id/btn_favorite"
                            android:src="@drawable/ic_search"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <ImageButton
                            android:background="@android:color/transparent"
                            android:id="@+id/btn_favorite"
                            android:paddingHorizontal="@dimen/dimen_16dp"
                            android:paddingVertical="@dimen/dimen_8dp"
                            android:layout_toStartOf="@id/btn_setting"
                            android:src="@drawable/ic_favorite_filled"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <ImageButton
                            android:background="@android:color/transparent"
                            android:id="@+id/btn_setting"
                            android:paddingHorizontal="@dimen/dimen_16dp"
                            android:paddingVertical="@dimen/dimen_8dp"
                            android:layout_alignParentEnd="true"
                            android:src="@drawable/ic_setting"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </RelativeLayout>

                </androidx.appcompat.widget.Toolbar>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/dimen_12dp"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:listitem="@layout/item_user" />

                <LinearLayout
                    android:id="@+id/layout_error"
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:orientation="vertical"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <TextView
                        android:id="@+id/tv_error_message"
                        style="@style/GitFriendTextStyle.Regular.Heading3.White"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center" />

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/lottie_error_message"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        app:layout_constraintBottom_toBottomOf="@+id/rv_user"
                        app:layout_constraintTop_toBottomOf="@+id/sv_user"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="false"
                        app:lottie_rawRes="@raw/lottie_failed" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:layout_gravity="center_horizontal"
                        android:id="@+id/btn_retry"
                        android:textAllCaps="false"
                        android:paddingHorizontal="@dimen/dimen_16dp"
                        android:background="@drawable/bg_button"
                        android:text="@string/action_retry"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </RelativeLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmeringLoadingHome"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/shimmer_home"/>

    </com.facebook.shimmer.ShimmerFrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>