<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_constraintTop_toTopOf="parent"
                app:navigationIcon="@drawable/ic_back" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_user"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:civ_border_color="@color/white"
                    app:civ_border_width="2dp"
                    android:layout_marginTop="@dimen/dimen_12dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:background="@color/light_grey"
                    tools:srcCompat="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/tv_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_16dp"
                    tools:text="UserName"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="?attr/text_color"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/img_user" />

                <TextView
                    android:id="@+id/tv_real_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_8dp"
                    android:textColor="?attr/text_color"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_user_name"
                    tools:text="RealName" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen_16dp"
                    android:layout_marginTop="@dimen/dimen_8dp"
                    android:weightSum="2"
                    app:layout_constraintTop_toBottomOf="@+id/tv_real_name">

                    <TextView
                        android:id="@+id/tv_following"
                        android:text="@string/label_following"
                        android:layout_width="0dp"
                        android:textAlignment="center"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/dimen_8dp"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/tv_follower"
                        android:text="@string/label_follower"
                        android:textAlignment="center"
                        android:layout_marginStart="@dimen/dimen_8dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/icon_company"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_16dp"
                    android:layout_marginTop="@dimen/dimen_16dp"
                    android:src="@drawable/ic_work"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

                <TextView
                    android:id="@+id/tv_user_company"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen_8dp"
                    android:layout_weight="45"
                    android:textColor="?attr/text_color"
                    app:layout_constraintBottom_toBottomOf="@+id/icon_company"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/icon_company"
                    app:layout_constraintTop_toTopOf="@+id/icon_company"
                    tools:text="RealName" />

                <ImageView
                    android:id="@+id/icon_location"
                    android:layout_marginTop="@dimen/dimen_8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_location"
                    android:layout_marginStart="@dimen/dimen_16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/icon_company" />

                <TextView
                    android:id="@+id/tv_user_location"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/text_color"
                    android:layout_marginHorizontal="@dimen/dimen_8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/icon_location"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/icon_location"
                    app:layout_constraintTop_toTopOf="@+id/icon_location"
                    tools:text="RealName" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_favorite_big"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_button"
                    android:layout_marginTop="@dimen/dimen_16dp"
                    android:paddingHorizontal="@dimen/dimen_16dp"
                    android:drawableEnd="@drawable/ic_favorite_filled"
                    tools:text="@string/label_fav_friend"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/icon_location" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_12dp"
                android:background="?attr/toolbar_color"
                app:layout_constraintTop_toBottomOf="@+id/btn_favorite_big"
                app:tabTextColor="@android:color/white" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tabs" />

        </LinearLayout>

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer_loading"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="match_parent">

            <include layout="@layout/shimmer_detail" />

        </com.facebook.shimmer.ShimmerFrameLayout>

    </RelativeLayout>



</ScrollView>
